crates/lyra-tests/tests/snapshots/corpus__lrm__ch26__explicit_import.snap
---
source: crates/lyra-tests/tests/corpus.rs
expression: ws.dump_diagnostics()
---
// file: main.sv (1 diagnostic)
  error[lyra.semantic[4]] 21:8..21:8: member `nonexistent` not found in package `P`
---
unit (0 diagnostics)
