crates/lyra-tests/tests/snapshots/corpus__lrm__ch26__wildcard_local_two_later_decls.snap
---
source: crates/lyra-tests/tests/corpus.rs
expression: ws.dump_diagnostics()
---
// file: main.sv (3 diagnostics)
  error[lyra.semantic[7]] 8:6..8:6: local declaration of `x` conflicts with wildcard import from package `p`
  error[lyra.semantic[2]] 10:7..10:7: duplicate definition of `x`
  error[lyra.semantic[7]] 10:7..10:7: local declaration of `x` conflicts with wildcard import from package `p`
---
unit (0 diagnostics)
